--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,14 +31,8 @@
     
     <section class="example-section">
       <mat-checkbox class="example-margin">Checked</mat-checkbox>
-    </section>
-
+    </section>    
     
-    <mat-form-field class="full-width">
-      <mat-select placeholder="Select">
-        <mat-option value="option">Option</mat-option>
-      </mat-select>
-    </mat-form-field>
     <mat-radio-group class="example-radio-group full-width">
       <mat-radio-button class="example-radio-button" *ngFor="let season of seasons" [value]="season">
         {{season}}
@@ -55,13 +49,20 @@
     <mat-button-toggle class="full-width" value="justify">
       <mat-icon>format_align_justify</mat-icon>
     </mat-button-toggle>
+
     <div style="margin-top: 10px">
       <mat-chip-list class="mat-chip-list-stacked">
-        <mat-chip *ngFor="let chip of availableColors" selected="true" [color]="chip.color">
+        <mat-chip *ngFor="let chip of availableColors" selected="true" [color]="chip.color" (click)="testClick()">
           {{chip.name}}
         </mat-chip>
       </mat-chip-list>
     </div>
     
+    <mat-form-field class="full-width">
+      <mat-select placeholder="Select">
+        <mat-option value="option">Option</mat-option>
+      </mat-select>
+    </mat-form-field>
+
   </div>
 </div>
