--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="example" class="example-form" [makeReadonly]="{IsActive:true,DomId:'example'}">
+<div id="example" class="example-form" [read-only]='readOnlyModel'>
   <div class="w-20p" style="text-align:center; margin-left: 500px;margin-right: 100px;margin-top: 20px;" id="example">
 
     <div class="example-container">
@@ -64,5 +64,8 @@
       </mat-select>
     </mat-form-field>
 
+    <div>
+      <a href="/" target="_blank">The home page will open in another tab.</a>
+    </div>
   </div>
 </div>
